<resources>
    <string name="app_name">Bitcoin Ticker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="number_sign">#</string>
    <string name="coin">COIN</string>
    <string name="percentage">%</string>
    <string name="price">PRICE</string>
    <string name="_24h">24H</string>
    <string name="market_cap">MARKET CAP</string>
    <string name="search_for_a_coin">Search for a coin</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="arrow_up">arrow_up</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="favourite_coins">Favourite Coins</string>
    <string name="search">Search</string>
    <string name="send_reset_email">Send Reset Email</string>
</resources>